--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "sequelize": "^6.35.2",
     "uuid": "^9.0.0"
   }
 }
